fix: update Vercel routing configuration for API endpoints
- Changed the destination path for API routes in vercel.json from "server/app.js" to "/server/app.js" for correct routing.
- Removed redundant route configuration for client paths to streamline the deployment settings.

--- a/vercel.json
+++ b/vercel.json
@@ -18,11 +18,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/app.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/$1"
+      "dest": "/server/app.js"
     }
   ]
 }
