fix: update output directory in Vercel configuration
- Changed the outputDirectory in vercel.json from "dist" to "client/dist" to correctly reflect the build output path for the client application.

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "config": {
         "installCommand": "cd client && npm install",
         "buildCommand": "npm run build",
-        "outputDirectory": "dist"
+        "outputDirectory": "client/dist"
       }
     },
     {
