--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "installCommand": "cd client && npm install",
-        "buildCommand": "npm run build",
-        "outputDirectory": "client/dist"
+        "outputDirectory": "dist"
       }
     },
     {
