fix: update Vercel routing configuration for client paths
- Added routing rules in vercel.json to serve client assets from the /client/dist directory and fallback to index.html for unmatched routes, improving deployment handling for the client application.

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,14 @@
     {
       "src": "/api/(.*)",
       "dest": "/server/app.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/dist/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/dist/index.html"
     }
   ]
 }
