fix: update server routing and Vercel configuration
- Modified server/app.js to support both local and deployed API endpoints, enhancing compatibility with Vercel's serverless environment.
- Updated vercel.json to streamline routing for client assets and ensure correct handling of unmatched routes.
- Added a new TEST_PATCH_OK.txt file for testing purposes.

--- a/vercel.json
+++ b/vercel.json
@@ -20,11 +20,12 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/$1"
+      "dest": "/$1",
+      "check": true
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/index.html"
+      "dest": "/index.html"
     }
   ]
 }
