fix: refine Vercel configuration for server and client routing
- Added a new build entry for server/app.js in vercel.json to ensure proper handling by Vercel.
- Updated routing rules to simplify the destination paths for API and client assets, enhancing clarity and functionality.

--- a/vercel.json
+++ b/vercel.json
@@ -2,32 +2,25 @@
   "version": 2,
   "builds": [
     {
+      "src": "server/app.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
       }
-    },
-    {
-      "src": "server/app.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/app.js"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "server/app.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/dist/index.html"
+      "dest": "client/dist/$1"
     }
   ]
 }
