--- a/vercel.json
+++ b/vercel.json
@@ -14,13 +14,7 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "server/app.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "client/dist/$1"
-    }
-  ]
+  { "src": "/api/(.*)", "dest": "server/app.js" },
+  { "src": "/(.*)", "dest": "client/dist/index.html" }
+]
 }
