--- a/vercel.json
+++ b/vercel.json
@@ -8,13 +8,11 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
-  { "src": "/api/(.*)", "dest": "server/app.js" },
-  { "src": "/(.*)", "dest": "client/dist/index.html" }
-]
+    { "src": "/api/(.*)", "dest": "server/app.js" },
+    { "src": "/(.*)", "dest": "client/dist/index.html" }
+  ]
 }
