fix: update Vercel configuration for client build directory
- Changed the distDir property in vercel.json to specify the correct output directory as "client/dist" for improved asset handling during deployment.
- Reformatted routing rules for better readability while maintaining functionality.

--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,19 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": {
+        "distDir": "client/dist"
+      }
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/app.js" },
-    { "src": "/(.*)", "dest": "client/dist/index.html" }
+    {
+      "src": "/api/(.*)",
+      "dest": "server/app.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/dist/index.html"
+    }
   ]
 }
