--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "server/app.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/dist"
-      }
-    }
+    { "src": "server/app.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "server/app.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "client/dist/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "server/app.js" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
